[project]
name = "llm-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kei Ishikawa", email = "k.stoneriv@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "transformers>=4.44.2",
    "sentencepiece>=0.2.0",
    "accelerate>=0.34.2",
    "unsloth>=2024.9",
    "torch==2.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"llm-server" = "llm_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.2",
    "isort>=5.13.2",
]

[tool.rye.scripts]  # Run as "rye run <command>"
fmt = "rye fmt"
lint = "rye lint --fix"
check-all = { chain = ["isort .", "fmt", "lint", "mypy ." ] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_server"]

[tool.mypy]
ignore_missing_imports = true
